package builder

import (
	"context"
	"encoding/binary"
	"fmt"
	"math/big"
	"time"

	consensuscfg "github.com/weisyn/v1/internal/config/consensus"
	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo_pb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
	configiface "github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	txiface "github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/utils/timeutil"
	"google.golang.org/protobuf/proto"
)

// IncentiveBuilder æ¿€åŠ±äº¤æ˜“æ„å»ºå™¨
//
// ğŸ¯ **é›¶å¢å‘æ¿€åŠ±æœºåˆ¶æ ¸å¿ƒç»„ä»¶**
//
// æ„å»ºå†…å®¹:
//  1. Coinbaseäº¤æ˜“ï¼ˆé›¶å¢å‘ï¼šä»…æ‰‹ç»­è´¹ï¼‰
//  2. èµåŠ©é¢†å–äº¤æ˜“ï¼ˆ0-Nç¬”ï¼‰
//
// èµåŠ©é¢†å–æµç¨‹:
//  1. æ‰«æèµåŠ©æ± UTXO
//  2. è¿‡æ»¤æœ‰æ•ˆèµåŠ©ï¼ˆæ£€æŸ¥DelegationLockã€æœ‰æ•ˆæœŸã€ç™½åå•ï¼‰
//  3. æ„å»ºé¢†å–äº¤æ˜“ï¼ˆInput: DelegationProof, Output: çŸ¿å·¥+æ‰¾é›¶ï¼‰
//  4. é™åˆ¶æ•°é‡ï¼ˆpolicy.MaxPerBlockï¼‰
//
// ğŸ”§ **æ¶æ„ä¼˜åŒ–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
//
//   - DelegateSignatureæ”¹ä¸ºå¯é€‰ç”Ÿæˆï¼šå¦‚æœæä¾›äº†Signeråˆ™ç”Ÿæˆï¼Œæœªæä¾›åˆ™ä¸ç”Ÿæˆ
//   - ä¿æŒ"ä»»æ„çŸ¿å·¥å¯é¢†å–"çš„çµæ´»æ€§ï¼šä¸å¼ºåˆ¶è¦æ±‚ç­¾å
//   - ç­¾åä¸»è¦ç”¨äºå®¡è®¡è¿½è¸ªï¼Œä¸æ˜¯å¿…é¡»çš„éªŒè¯é¡¹
type IncentiveBuilder struct {
	feeManager txiface.FeeManager
	eutxoQuery persistence.UTXOQuery
	config     configiface.Provider
	signer     txiface.Signer // å¯é€‰ç­¾åå™¨ï¼ˆnilæ—¶ä¸ç”Ÿæˆç­¾åï¼Œç”¨äºå®¡è®¡è¿½è¸ªï¼‰
	logger     Logger         // æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
}

// Logger æ—¥å¿—æ¥å£ï¼ˆç®€åŒ–ç‰ˆï¼Œé¿å…å¼•å…¥å®Œæ•´çš„æ—¥å¿—æ¡†æ¶ä¾èµ–ï¼‰
type Logger interface {
	Warnf(format string, args ...interface{})
	Errorf(format string, args ...interface{})
}

// NewIncentiveBuilder åˆ›å»ºæ¿€åŠ±äº¤æ˜“æ„å»ºå™¨
//
// å‚æ•°:
//
//	feeManager: è´¹ç”¨ç®¡ç†å™¨
//	utxoManager: UTXOç®¡ç†å™¨
//	config: é…ç½®æä¾›è€…
//	signer: ç­¾åå™¨ï¼ˆå¯é€‰ï¼Œnilæ—¶ä¸ç”Ÿæˆç­¾åï¼‰
//
// è®¾è®¡è¯´æ˜:
//   - signerå‚æ•°å¯é€‰ï¼Œæ”¯æŒå‘åå…¼å®¹
//   - å¦‚æœæä¾›äº†signerï¼Œå°†ç”ŸæˆçœŸå®çš„DelegationProofç­¾åï¼ˆç”¨äºå®¡è®¡è¿½è¸ªï¼‰
//   - å¦‚æœsignerä¸ºnilï¼Œä¸ç”Ÿæˆç­¾åï¼ˆDelegateSignatureä¿æŒä¸ºnilï¼‰ï¼ŒéªŒè¯ç«¯ä¼šæ¥å—
//   - ç­¾åä¸»è¦ç”¨äºå®¡è®¡è¿½è¸ªï¼Œä¸æ˜¯å¿…é¡»çš„éªŒè¯é¡¹
func NewIncentiveBuilder(
	feeManager txiface.FeeManager,
	eutxoQuery persistence.UTXOQuery,
	config configiface.Provider,
	signer txiface.Signer,
) *IncentiveBuilder {
	if feeManager == nil {
		panic("feeManagerä¸èƒ½ä¸ºnil")
	}
	if eutxoQuery == nil {
		panic("eutxoQueryä¸èƒ½ä¸ºnil")
	}
	if config == nil {
		panic("configä¸èƒ½ä¸ºnil")
	}
	// signerå¯ä»¥ä¸ºnilï¼ˆå‘åå…¼å®¹ï¼‰
	return &IncentiveBuilder{
		feeManager: feeManager,
		eutxoQuery: eutxoQuery,
		config:     config,
		signer:     signer,
	}
}

// ç¡®ä¿å®ç°æ¥å£
var _ txiface.IncentiveTxBuilder = (*IncentiveBuilder)(nil)

// BuildIncentiveTransactions å®ç° txiface.IncentiveTxBuilder
//
// å‚æ•°:
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	candidateTxs: å€™é€‰äº¤æ˜“åˆ—è¡¨ï¼ˆç”¨äºè®¡ç®—æ‰‹ç»­è´¹ï¼‰
//	minerAddr: çŸ¿å·¥åœ°å€ï¼ˆ20å­—èŠ‚ï¼‰
//	chainID: é“¾ID
//	blockHeight: å½“å‰åŒºå—é«˜åº¦ï¼ˆç”¨äºæ£€æŸ¥èµåŠ©æœ‰æ•ˆæœŸï¼‰
//
// è¿”å›:
//
//	[]*Transaction: æ¿€åŠ±äº¤æ˜“åˆ—è¡¨ï¼ˆCoinbase + èµåŠ©é¢†å–ï¼‰
//	error: æ„å»ºé”™è¯¯
func (b *IncentiveBuilder) BuildIncentiveTransactions(
	ctx context.Context,
	candidateTxs []*transaction_pb.Transaction,
	minerAddr []byte,
	chainID []byte,
	blockHeight uint64,
) ([]*transaction_pb.Transaction, error) {
	var result []*transaction_pb.Transaction

	// 1. æ„å»ºCoinbaseï¼ˆé›¶å¢å‘ï¼‰
	coinbase, err := b.buildCoinbase(ctx, candidateTxs, minerAddr, chainID)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºCoinbaseå¤±è´¥: %w", err)
	}
	result = append(result, coinbase)

	// 2. æ„å»ºèµåŠ©é¢†å–äº¤æ˜“ï¼ˆå¯é€‰ï¼‰
	sponsorCfg := b.getSponsorIncentiveConfig()
	if sponsorCfg != nil && sponsorCfg.Enabled {
		sponsorTxs, err := b.buildSponsorClaimTransactions(ctx, minerAddr, chainID, blockHeight, sponsorCfg)
		if err != nil {
			// èµåŠ©é¢†å–å¤±è´¥ä¸åº”é˜»å¡åŒºå—ç”Ÿæˆï¼Œè®°å½•è­¦å‘Šåç»§ç»­
			if b.logger != nil {
				b.logger.Warnf("æ„å»ºèµåŠ©é¢†å–äº¤æ˜“å¤±è´¥: %v", err)
			} else {
				fmt.Printf("WARN: æ„å»ºèµåŠ©é¢†å–äº¤æ˜“å¤±è´¥: %v\n", err)
			}
		} else {
			result = append(result, sponsorTxs...)
		}
	}

	return result, nil
}

// buildCoinbase æ„å»ºCoinbaseäº¤æ˜“
func (b *IncentiveBuilder) buildCoinbase(
	ctx context.Context,
	candidateTxs []*transaction_pb.Transaction,
	minerAddr []byte,
	chainID []byte,
) (*transaction_pb.Transaction, error) {
	// è®¡ç®—æ‰€æœ‰äº¤æ˜“çš„è´¹ç”¨
	var allFees []*txiface.AggregatedFees
	for _, tx := range candidateTxs {
		fee, err := b.feeManager.CalculateTransactionFee(ctx, tx)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“è´¹ç”¨å¤±è´¥: %w", err)
		}
		allFees = append(allFees, fee)
	}

	// èšåˆè´¹ç”¨
	aggregated := b.feeManager.AggregateFees(allFees)

	// æ„å»ºCoinbase
	return b.feeManager.BuildCoinbase(aggregated, minerAddr, chainID)
}

// buildSponsorClaimTransactions æ„å»ºèµåŠ©é¢†å–äº¤æ˜“åˆ—è¡¨
func (b *IncentiveBuilder) buildSponsorClaimTransactions(
	ctx context.Context,
	minerAddr []byte,
	chainID []byte,
	blockHeight uint64,
	policy *consensuscfg.SponsorIncentiveConfig,
) ([]*transaction_pb.Transaction, error) {
	// 1. æ‰«æèµåŠ©æ± UTXO
	sponsorUTXOs, err := b.eutxoQuery.GetSponsorPoolUTXOs(ctx, true)
	if err != nil {
		return nil, fmt.Errorf("æ‰«æèµåŠ©æ± å¤±è´¥: %w", err)
	}

	if len(sponsorUTXOs) == 0 {
		// æ²¡æœ‰å¯ç”¨èµåŠ©ï¼Œæ­£å¸¸æƒ…å†µ
		return nil, nil
	}

	// 2. è¿‡æ»¤æœ‰æ•ˆèµåŠ©
	validSponsors := b.filterValidSponsors(sponsorUTXOs, blockHeight, policy)

	if len(validSponsors) == 0 {
		return nil, nil
	}

	// 3. é™åˆ¶æ•°é‡
	maxCount := int(policy.MaxPerBlock)
	if maxCount > 0 && len(validSponsors) > maxCount {
		validSponsors = validSponsors[:maxCount]
	}

	// 4. æ„å»ºé¢†å–äº¤æ˜“
	var claimTxs []*transaction_pb.Transaction
	for _, sponsor := range validSponsors {
		claimTx, err := b.buildSingleSponsorClaimTx(ctx, sponsor, minerAddr, chainID, policy)
		if err != nil {
			// å•ä¸ªèµåŠ©æ„å»ºå¤±è´¥ï¼Œè®°å½•è­¦å‘Šåç»§ç»­
			fmt.Printf("WARN: æ„å»ºèµåŠ©é¢†å–äº¤æ˜“å¤±è´¥ [%x:%d]: %v\n",
				sponsor.Outpoint.TxId, sponsor.Outpoint.OutputIndex, err)
			continue
		}
		claimTxs = append(claimTxs, claimTx)
	}

	return claimTxs, nil
}

// filterValidSponsors è¿‡æ»¤æœ‰æ•ˆçš„èµåŠ©UTXO
//
// è¿‡æ»¤æ¡ä»¶:
//  1. å¿…é¡»æœ‰DelegationLock
//  2. AuthorizedOperationsåŒ…å«"consume"
//  3. AllowedDelegatesä¸ºç©ºï¼ˆä»»æ„çŸ¿å·¥å¯é¢†å–ï¼‰
//  4. æœªè¿‡æœŸ: currentHeight <= creationHeight + expiryDuration
//  5. Tokenåœ¨ç™½åå•ä¸­ï¼ˆpolicy.AcceptedTokensï¼‰
//  6. é‡‘é¢ >= æœ€ä½é‡‘é¢ï¼ˆpolicy.MinAmountPerSponsorï¼‰
func (b *IncentiveBuilder) filterValidSponsors(
	sponsors []*utxo_pb.UTXO,
	currentHeight uint64,
	policy *consensuscfg.SponsorIncentiveConfig,
) []*utxo_pb.UTXO {
	var valid []*utxo_pb.UTXO

	for _, sponsor := range sponsors {
		// æ£€æŸ¥æ˜¯å¦æœ‰ CachedOutput
		output := sponsor.GetCachedOutput()
		if output == nil || output.GetAsset() == nil {
			continue
		}

		// æ£€æŸ¥ DelegationLock
		delegationLock := b.extractDelegationLock(output)
		if delegationLock == nil {
			continue
		}

		// æ£€æŸ¥æˆæƒæ“ä½œåŒ…å« "consume"
		if !b.hasOperation(delegationLock.AuthorizedOperations, "consume") {
			continue
		}

		// æ£€æŸ¥ AllowedDelegates ä¸ºç©ºï¼ˆä»»æ„çŸ¿å·¥ï¼‰
		if len(delegationLock.AllowedDelegates) > 0 {
			continue
		}

		// æ£€æŸ¥æœªè¿‡æœŸ
		if delegationLock.ExpiryDurationBlocks != nil && *delegationLock.ExpiryDurationBlocks > 0 {
			expiryHeight := sponsor.BlockHeight + *delegationLock.ExpiryDurationBlocks
			if currentHeight > expiryHeight {
				continue
			}
		}

		// æ£€æŸ¥Tokenç™½åå•å¹¶è·å–MinAmountï¼ˆä¸­ä¼˜å…ˆçº§-2ï¼‰
		tokenKey := b.extractTokenKey(output.GetAsset())
		minAmount, accepted := b.getTokenMinAmount(tokenKey, policy.AcceptedTokens)
		if !accepted {
			continue
		}

		// æ£€æŸ¥é‡‘é¢ >= MinAmountï¼ˆä¸­ä¼˜å…ˆçº§-2ï¼‰
		if minAmount > 0 {
			amount := b.extractAmount(output.GetAsset())
			if amount.Cmp(big.NewInt(int64(minAmount))) < 0 {
				continue // é‡‘é¢ä½äºæœ€ä½è¦æ±‚
			}
		}

		valid = append(valid, sponsor)
	}

	return valid
}

// buildSingleSponsorClaimTx æ„å»ºå•ä¸ªèµåŠ©é¢†å–äº¤æ˜“
func (b *IncentiveBuilder) buildSingleSponsorClaimTx(
	ctx context.Context,
	sponsor *utxo_pb.UTXO,
	minerAddr []byte,
	chainID []byte,
	policy *consensuscfg.SponsorIncentiveConfig,
) (*transaction_pb.Transaction, error) {
	output := sponsor.GetCachedOutput()
	asset := output.GetAsset()
	delegationLock := b.extractDelegationLock(output)

	// è®¡ç®—é¢†å–é‡‘é¢ï¼ˆä¸è¶…è¿‡DelegationLocké™åˆ¶å’ŒPolicyé™åˆ¶ï¼‰
	totalAmount := b.extractAmount(asset)
	maxPerOperation := big.NewInt(int64(delegationLock.MaxValuePerOperation))
	policyMax := big.NewInt(int64(policy.MaxAmountPerSponsor))

	claimAmount := new(big.Int).Set(totalAmount)
	if maxPerOperation.Sign() > 0 && claimAmount.Cmp(maxPerOperation) > 0 {
		claimAmount.Set(maxPerOperation)
	}
	if policyMax.Sign() > 0 && claimAmount.Cmp(policyMax) > 0 {
		claimAmount.Set(policyMax)
	}

	// è®¡ç®—æ‰¾é›¶
	changeAmount := new(big.Int).Sub(totalAmount, claimAmount)

	// æ„å»ºè¾“å‡º
	outputs := []*transaction_pb.TxOutput{
		// è¾“å‡º1: çŸ¿å·¥é¢†å–
		{
			Owner: minerAddr,
			LockingConditions: []*transaction_pb.LockingCondition{
				{
					Condition: &transaction_pb.LockingCondition_SingleKeyLock{
						SingleKeyLock: &transaction_pb.SingleKeyLock{
							KeyRequirement: &transaction_pb.SingleKeyLock_RequiredAddressHash{
								RequiredAddressHash: minerAddr,
							},
							RequiredAlgorithm: transaction_pb.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
							SighashType:       transaction_pb.SignatureHashType_SIGHASH_ALL,
						},
					},
				},
			},
			OutputContent: &transaction_pb.TxOutput_Asset{
				Asset: b.cloneAssetWithAmount(asset, claimAmount),
			},
		},
	}

	// å¦‚æœæœ‰æ‰¾é›¶ï¼Œåˆ›å»ºæ‰¾é›¶è¾“å‡ºï¼ˆè¿”å›èµåŠ©æ± ï¼‰
	if changeAmount.Sign() > 0 {
		// å¤åˆ¶åŸæœ‰çš„DelegationLock
		clonedLock := proto.Clone(delegationLock).(*transaction_pb.DelegationLock)
		outputs = append(outputs, &transaction_pb.TxOutput{
			Owner: constants.SponsorPoolOwner[:],
			LockingConditions: []*transaction_pb.LockingCondition{
				{
					Condition: &transaction_pb.LockingCondition_DelegationLock{
						DelegationLock: clonedLock,
					},
				},
			},
			OutputContent: &transaction_pb.TxOutput_Asset{
				Asset: b.cloneAssetWithAmount(asset, changeAmount),
			},
		})
	}

	// æ„å»º DelegationProof
	// ğŸ”’ ç¼ºé™·-1: æ£€æŸ¥big.Intæ˜¯å¦è¶…è¿‡uint64èŒƒå›´
	var valueAmount uint64
	if claimAmount.IsUint64() {
		valueAmount = claimAmount.Uint64()
	} else {
		// è¶…è¿‡uint64æœ€å¤§å€¼ï¼Œè¿”å›é”™è¯¯ï¼ˆä¸åº”æ„å»ºè¿™æ ·çš„äº¤æ˜“ï¼‰
		// ğŸ’¡ **æ¶æ„æ”¹è¿›å»ºè®®**ï¼šå½“å‰ä½¿ç”¨uint64å­˜å‚¨é‡‘é¢ï¼Œç²¾åº¦æœ‰é™ï¼ˆæœ€å¤š~184.4äº¿ WESï¼Œå³2^64-1 BaseUnitï¼‰ã€‚
		// æœªæ¥å¦‚éœ€æ”¯æŒæ›´å¤§é‡‘é¢æˆ–æ›´é«˜ç²¾åº¦ï¼Œéœ€è¦è¿›è¡Œä»¥ä¸‹æ”¹åŠ¨ï¼š
		// 1. ä¿®æ”¹ pb/blockchain/block/transaction/value.proto ä¸­çš„ ValueAmount.amount å­—æ®µ
		//    ä» uint64 æ”¹ä¸º string ç±»å‹
		// 2. é‡æ–°ç”Ÿæˆ protobuf ä»£ç ï¼ˆmake proto æˆ– buf generateï¼‰
		// 3. ä¿®æ”¹æ‰€æœ‰ä½¿ç”¨ ValueAmount çš„ä»£ç ï¼Œä½¿ç”¨ big.Int è¿›è¡Œè§£æå’Œè®¡ç®—
		// 4. æ›´æ–°éªŒè¯æ’ä»¶ä¸­çš„é‡‘é¢è®¡ç®—é€»è¾‘ï¼ˆconservationæ’ä»¶ï¼‰
		return nil, fmt.Errorf("é¢†å–é‡‘é¢è¶…è¿‡uint64æœ€å¤§å€¼: %s", claimAmount.String())
	}

	delegationProof := &transaction_pb.DelegationProof{
		DelegationTransactionId: sponsor.Outpoint.TxId,
		DelegationOutputIndex:   sponsor.Outpoint.OutputIndex,
		OperationType:           "consume",
		ValueAmount:             valueAmount,
		DelegateAddress:         minerAddr,
	}

	// ğŸ” **æ¶æ„ä¼˜åŒ–ï¼šDelegateSignatureæ”¹ä¸ºå¯é€‰ç”Ÿæˆ**
	//
	// **è®¾è®¡å†³ç­–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
	// - DelegationLockå·²ç»æˆæƒä»»æ„çŸ¿å·¥å¯ä»¥consumeï¼ˆAllowedDelegatesä¸ºç©ºï¼‰
	// - DelegateAddresså·²ç»æŒ‡å®šäº†çŸ¿å·¥åœ°å€
	// - DelegateSignatureä¸»è¦ç”¨äºå®¡è®¡è¿½è¸ªï¼Œä¸æ˜¯å¿…é¡»çš„éªŒè¯é¡¹
	//
	// **ç”Ÿæˆç­–ç•¥**ï¼š
	// - å¦‚æœæä¾›äº†Signerï¼Œç”ŸæˆçœŸå®ç­¾åï¼ˆå¯é€‰åŠŸèƒ½ï¼‰
	// - å¦‚æœæœªæä¾›Signerï¼Œä¸ç”Ÿæˆç­¾åï¼ˆnilï¼‰ï¼ŒéªŒè¯ç«¯ä¼šæ¥å—
	// - ä¿æŒ"ä»»æ„çŸ¿å·¥å¯é¢†å–"çš„çµæ´»æ€§
	//
	// **å‘åå…¼å®¹**ï¼š
	// - æ—§çš„å ä½ç¬¦ç­¾åé€»è¾‘å·²ç§»é™¤ï¼Œä¸å†ç”Ÿæˆå ä½ç¬¦
	// - éªŒè¯ç«¯å·²æ”¯æŒç­¾åå¯é€‰ï¼Œä¸ä¼šå› ç¼ºå°‘ç­¾åè€Œå¤±è´¥

	if b.signer != nil {
		// æä¾›äº†Signerï¼Œç”Ÿæˆå¯é€‰ç­¾åï¼ˆç”¨äºå®¡è®¡è¿½è¸ªï¼‰
		signature, err := b.signDelegationProof(ctx, delegationProof, sponsor, minerAddr, claimAmount, changeAmount)
		if err != nil {
			// ç­¾åç”Ÿæˆå¤±è´¥ä¸åº”è¯¥é˜»æ­¢äº¤æ˜“æ„å»ºï¼Œè®°å½•è­¦å‘Šåç»§ç»­
			if b.logger != nil {
				b.logger.Warnf("ç”ŸæˆDelegateSignatureå¤±è´¥ï¼ˆä¸å½±å“äº¤æ˜“æ„å»ºï¼‰: %v", err)
			}
			// ä¸è®¾ç½®DelegateSignatureï¼Œä¿æŒä¸ºnil
		} else {
			delegationProof.DelegateSignature = signature
		}
	}
	// å¦‚æœæœªæä¾›Signerï¼ŒDelegateSignatureä¿æŒä¸ºnilï¼ˆéªŒè¯ç«¯ä¼šæ¥å—ï¼‰

	// æ„å»ºäº¤æ˜“
	tx := &transaction_pb.Transaction{
		Version: 1,
		Inputs: []*transaction_pb.TxInput{
			{
				PreviousOutput:  sponsor.Outpoint,
				IsReferenceOnly: false, // æ¶ˆè´¹æ¨¡å¼
				UnlockingProof: &transaction_pb.TxInput_DelegationProof{
					DelegationProof: delegationProof,
				},
			},
		},
		Outputs:           outputs,
		Nonce:             uint64(time.Now().UnixNano()),
		CreationTimestamp: uint64(timeutil.NowUnix()),
		ChainId:           chainID,
	}

	return tx, nil
}

// è¾…åŠ©æ–¹æ³•

func (b *IncentiveBuilder) getSponsorIncentiveConfig() *consensuscfg.SponsorIncentiveConfig {
	consensusCfg := b.config.GetConsensus()
	if consensusCfg == nil {
		return nil
	}
	return &consensusCfg.Miner.SponsorIncentive
}

func (b *IncentiveBuilder) extractDelegationLock(output *transaction_pb.TxOutput) *transaction_pb.DelegationLock {
	for _, lock := range output.LockingConditions {
		if dl := lock.GetDelegationLock(); dl != nil {
			return dl
		}
	}
	return nil
}

// GetSponsorUTXOHelper è·å–èµåŠ©UTXOè¾…åŠ©å·¥å…·
//
// **ç”¨é€”**ï¼šæä¾›èµåŠ©UTXOçš„å…ƒæ•°æ®æå–å’Œç”Ÿå‘½å‘¨æœŸç®¡ç†åŠŸèƒ½
func (b *IncentiveBuilder) GetSponsorUTXOHelper() *SponsorUTXOHelper {
	return NewSponsorUTXOHelper(b.eutxoQuery)
}

func (b *IncentiveBuilder) hasOperation(operations []string, target string) bool {
	for _, op := range operations {
		if op == target {
			return true
		}
	}
	return false
}

func (b *IncentiveBuilder) extractTokenKey(asset *transaction_pb.AssetOutput) txiface.TokenKey {
	if asset.GetNativeCoin() != nil {
		return txiface.TokenKey("native")
	}
	if ct := asset.GetContractToken(); ct != nil {
		if fungibleClassId := ct.GetFungibleClassId(); fungibleClassId != nil {
			return txiface.TokenKey(fmt.Sprintf("contract:%x:%x", ct.ContractAddress, fungibleClassId))
		}
		if nftUniqueId := ct.GetNftUniqueId(); nftUniqueId != nil {
			return txiface.TokenKey(fmt.Sprintf("contract:%x:nft:%x", ct.ContractAddress, nftUniqueId))
		}
		if sfId := ct.GetSemiFungibleId(); sfId != nil {
			return txiface.TokenKey(fmt.Sprintf("contract:%x:sft:%x:%x", ct.ContractAddress, sfId.BatchId, sfId.InstanceId))
		}
	}
	return txiface.TokenKey("unknown")
}

func (b *IncentiveBuilder) extractAmount(asset *transaction_pb.AssetOutput) *big.Int {
	var amountStr string
	if nc := asset.GetNativeCoin(); nc != nil {
		amountStr = nc.Amount
	} else if ct := asset.GetContractToken(); ct != nil {
		amountStr = ct.Amount
	}
	amount, _ := new(big.Int).SetString(amountStr, 10)
	return amount
}

func (b *IncentiveBuilder) isTokenAcceptedInPolicy(tokenKey txiface.TokenKey, acceptedTokens []consensuscfg.TokenFilterConfig) bool {
	if len(acceptedTokens) == 0 {
		// ç©ºç™½åå•è¡¨ç¤ºæ¥å—æ‰€æœ‰Token
		return true
	}
	tokenStr := string(tokenKey)
	for _, tokenFilter := range acceptedTokens {
		if tokenFilter.AssetID == tokenStr {
			return true
		}
	}
	return false
}

// getTokenMinAmount è·å–Tokençš„æœ€ä½é‡‘é¢è¦æ±‚ï¼ˆä¸­ä¼˜å…ˆçº§-2ï¼‰
//
// å‚æ•°:
//
//	tokenKey: Tokenæ ‡è¯†
//	acceptedTokens: ç™½åå•é…ç½®
//
// è¿”å›:
//
//	minAmount: æœ€ä½é‡‘é¢è¦æ±‚ï¼ˆ0è¡¨ç¤ºæ— è¦æ±‚ï¼‰
//	accepted: Tokenæ˜¯å¦åœ¨ç™½åå•ä¸­
func (b *IncentiveBuilder) getTokenMinAmount(tokenKey txiface.TokenKey, acceptedTokens []consensuscfg.TokenFilterConfig) (uint64, bool) {
	if len(acceptedTokens) == 0 {
		// ç©ºç™½åå•è¡¨ç¤ºæ¥å—æ‰€æœ‰Tokenï¼Œæ— æœ€ä½é‡‘é¢è¦æ±‚
		return 0, true
	}
	tokenStr := string(tokenKey)
	for _, tokenFilter := range acceptedTokens {
		if tokenFilter.AssetID == tokenStr {
			return tokenFilter.MinAmount, true
		}
	}
	return 0, false // Tokenä¸åœ¨ç™½åå•ä¸­
}

func (b *IncentiveBuilder) cloneAssetWithAmount(original *transaction_pb.AssetOutput, newAmount *big.Int) *transaction_pb.AssetOutput {
	if nc := original.GetNativeCoin(); nc != nil {
		return &transaction_pb.AssetOutput{
			AssetContent: &transaction_pb.AssetOutput_NativeCoin{
				NativeCoin: &transaction_pb.NativeCoinAsset{
					Amount: newAmount.String(),
				},
			},
		}
	}
	if ct := original.GetContractToken(); ct != nil {
		cloned := proto.Clone(ct).(*transaction_pb.ContractTokenAsset)
		cloned.Amount = newAmount.String()
		return &transaction_pb.AssetOutput{
			AssetContent: &transaction_pb.AssetOutput_ContractToken{
				ContractToken: cloned,
			},
		}
	}
	return nil
}

// signDelegationProof ä¸ºDelegationProofç”Ÿæˆå¯é€‰ç­¾å
//
// ğŸ” **æ¶æ„ä¼˜åŒ–ï¼šç­¾åæ”¹ä¸ºå¯é€‰ç”Ÿæˆ**
//
// **è®¾è®¡å†³ç­–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
// - ç­¾åä¸»è¦ç”¨äºå®¡è®¡è¿½è¸ªï¼Œä¸æ˜¯å¿…é¡»çš„éªŒè¯é¡¹
// - ä¿æŒ"ä»»æ„çŸ¿å·¥å¯é¢†å–"çš„çµæ´»æ€§
//
// **ç­¾åå†…å®¹**ï¼š
//
//	å¯¹ DelegationProof çš„æ ¸å¿ƒå­—æ®µè¿›è¡Œå“ˆå¸Œï¼Œç„¶åä½¿ç”¨çŸ¿å·¥ç§é’¥ç­¾åã€‚
//	è¿™å¯ç”¨äºå®¡è®¡è¿½è¸ªï¼Œè¯æ˜çŸ¿å·¥ç¡®å®é¢†å–äº†èµåŠ©ã€‚
//
// **æ³¨æ„**ï¼š
//
//	æ­¤æ–¹æ³•ä»…åœ¨Signerä¸ä¸ºnilæ—¶è¢«è°ƒç”¨ï¼Œå¦‚æœSignerä¸ºnilï¼Œåˆ™ä¸ä¼šç”Ÿæˆç­¾åã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡
//	proof: DelegationProofå¯¹è±¡ï¼ˆå¾…ç­¾åï¼‰
//	sponsor: èµåŠ©UTXO
//	minerAddr: çŸ¿å·¥åœ°å€
//	claimAmount: é¢†å–é‡‘é¢
//	changeAmount: æ‰¾é›¶é‡‘é¢
//
// è¿”å›ï¼š
//
//	*SignatureData: ç­¾åæ•°æ®ï¼ˆå¦‚æœç”ŸæˆæˆåŠŸï¼‰
//	error: ç­¾åé”™è¯¯
func (b *IncentiveBuilder) signDelegationProof(
	ctx context.Context,
	proof *transaction_pb.DelegationProof,
	sponsor *utxo_pb.UTXO,
	minerAddr []byte,
	claimAmount *big.Int,
	changeAmount *big.Int,
) (*transaction_pb.SignatureData, error) {
	// æ„å»ºå¾…ç­¾åçš„æ•°æ®ï¼ˆDelegationProofçš„è§„èŒƒåºåˆ—åŒ–ï¼‰
	signData, err := b.buildDelegationProofSignData(proof, sponsor, minerAddr, claimAmount, changeAmount)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºç­¾åæ•°æ®å¤±è´¥: %w", err)
	}

	// ğŸ” **P0-3ä¿®å¤ï¼šä½¿ç”¨çœŸå®çš„å¯†ç å­¦ç­¾å**
	//
	// **å®ç°è¯´æ˜**ï¼š
	// - ä½¿ç”¨Signeræ¥å£çš„SignBytesæ–¹æ³•å¯¹æ•°æ®è¿›è¡Œç­¾å
	// - å¦‚æœç­¾åå¤±è´¥ï¼Œè¿”å›é”™è¯¯ï¼ˆä¸åº”è¯¥ç»§ç»­ä½¿ç”¨å ä½ç¬¦ï¼‰
	//
	// **æ³¨æ„**ï¼šsignDataåº”è¯¥æ˜¯å·²ç»è§„èŒƒåŒ–å¤„ç†çš„å¾…ç­¾åæ•°æ®ï¼ˆé€šå¸¸æ˜¯å“ˆå¸Œå€¼ï¼‰
	signature, err := b.signer.SignBytes(ctx, signData)
	if err != nil {
		return nil, fmt.Errorf("ç­¾åDelegationProofå¤±è´¥: %w", err)
	}

	return &transaction_pb.SignatureData{
		Value: signature,
	}, nil
}

// buildDelegationProofSignData æ„å»ºDelegationProofçš„ç­¾åæ•°æ®
//
// ç­¾åæ•°æ®åŒ…æ‹¬ï¼š
//   - DelegationTransactionId
//   - DelegationOutputIndex
//   - OperationType
//   - ValueAmount
//   - DelegateAddress
//   - èµåŠ©UTXOçš„OutPoint
//   - é¢†å–é‡‘é¢å’Œæ‰¾é›¶é‡‘é¢
//
// è¿”å›ï¼š
//
//	[]byte: è§„èŒƒåŒ–çš„ç­¾åæ•°æ®ï¼ˆå“ˆå¸Œè¾“å…¥ï¼‰
//	error: æ„å»ºé”™è¯¯
func (b *IncentiveBuilder) buildDelegationProofSignData(
	proof *transaction_pb.DelegationProof,
	sponsor *utxo_pb.UTXO,
	minerAddr []byte,
	claimAmount *big.Int,
	changeAmount *big.Int,
) ([]byte, error) {
	// ä½¿ç”¨ç®€å•çš„è§„èŒƒåºåˆ—åŒ–ï¼ˆå®é™…ç”Ÿäº§ä¸­åº”ä½¿ç”¨æ›´ä¸¥æ ¼çš„åºåˆ—åŒ–ï¼‰
	data := []byte{}

	// æ·»åŠ å„ä¸ªå­—æ®µï¼ˆä½¿ç”¨å›ºå®šå®½åº¦ç¼–ç ä»¥é¿å…æˆªæ–­ï¼‰
	data = append(data, proof.DelegationTransactionId...)
	// ğŸ”’ ç²¾åº¦-2: 8å­—èŠ‚å¤§ç«¯ç¼–ç è¾“å‡ºç´¢å¼•ï¼ˆuint32 â†’ uint64ï¼‰
	idx := make([]byte, 8)
	binary.BigEndian.PutUint64(idx, uint64(proof.DelegationOutputIndex))
	data = append(data, idx...)
	data = append(data, []byte(proof.OperationType)...)
	data = append(data, []byte(fmt.Sprintf("%d", proof.ValueAmount))...)
	data = append(data, minerAddr...)

	// æ·»åŠ èµåŠ©UTXOä¿¡æ¯
	if sponsor.Outpoint != nil {
		data = append(data, sponsor.Outpoint.TxId...)
		data = append(data, byte(sponsor.Outpoint.OutputIndex))
	}

	// æ·»åŠ é‡‘é¢ä¿¡æ¯
	data = append(data, []byte(claimAmount.String())...)
	data = append(data, []byte(changeAmount.String())...)

	return data, nil
}
